# ciana

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  status.md
.github/workflows/: ccpp.yml
cmake/: gtest.cmake
include/: analyzer.h  ast_reader.h  ast_reader_libtooling.h  input.h  location.h  output.h
src/: analyzer.cc  analyzer.h  ast_reader.cc  ast_reader.h  ast_reader_creater.cc  ast_reader_creater.h  ast_reader_libclang.cc  ast_reader_libclang.h  ast_reader_libtooling.cc  input.cc  input.h  location.cc  location.h  main.cc  output.cc  output.h  result.h
test/: CMakeLists.txt
test/ast_reader/: CMakeLists.txt  test_ast_reader_libtooling.cc
